@@ -42,8 +42,9 @@
 - https://github.com/eclipse-sirius/sirius-web/issues/2908[#2908] [diagram] Homogenize delete icon
 - https://github.com/eclipse-sirius/sirius-web/issues/3485[#3485] [diagram] Add a validation error message when background value is missing
 - https://github.com/eclipse-sirius/sirius-web/issues/3480[#3480] [diagram] Fix an error that prevents border color to be properly applied
-- https://github.com/eclipse-sirius/sirius-web/issues/3538[#3538] [fomrs] Register the Details view description in the editing context
+- https://github.com/eclipse-sirius/sirius-web/issues/3538[#3538] [form] Register the Details view description in the editing context
 - https://github.com/eclipse-sirius/sirius-web/issues/3575[#3575] [core] Restore support for studio palette colors
+- https://github.com/eclipse-sirius/sirius-web/issues/3582[#3582] [tree] Restore the initial direct edit tree item label for the explorer
 
 === New Features
 
